Implement Find Owner. Closses #55